--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+    <context-param>
+        <param-name>developer</param-name>
+        <param-value>Ta Chi Thanh Danh</param-value>
+    </context-param>
     <!-- Create servlet name -->
     <servlet>
         <servlet-name>index</servlet-name>
@@ -37,5 +41,17 @@
     <servlet-mapping>
         <servlet-name>register-success</servlet-name>
         <url-pattern>/register-success</url-pattern>
+    </servlet-mapping>
+
+    <!-- Create servlet name -->
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <jsp-file>/login.jsp</jsp-file>
+    </servlet>
+
+    <!-- Map the URL pattern to the servlet -->
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
 </web-app>
