--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,29 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
     <context-param>
+        <param-name>host</param-name>
+        <param-value>smtp.gmail.com</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>port</param-name>
+        <param-value>587</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>email</param-name>
+        <param-value>emailstore.testing2024@gmail.com</param-value>
+    </context-param>
+    <context-param>
+        <param-name>name</param-name>
+        <param-value>Book Store Admin</param-value>
+    </context-param>
+    <context-param>
+        <param-name>pass</param-name>
+        <param-value>YOUR_PASSWORD</param-value>
+    </context-param>
+
+    <context-param>
         <param-name>developer</param-name>
         <param-value>Ta Chi Thanh Danh</param-value>
     </context-param>
