--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+<!--    <context-param>-->
+<!--        <param-name>avatar-directory</param-name>-->
+<!--        <param-value>user/img</param-value>-->
+<!--    </context-param>-->
+
     <context-param>
         <param-name>host</param-name>
         <param-value>127.0.0.1</param-value>
